# gemma-3-python

./: .coverage  .gitignore  .taskmasterconfig  .webui_secret_key  CHANGELOG.md  GEMMA-3_newer-models.md  Procfile  README.md  annotate_pokemon_card.py  example_tools.py  gemma3.py  gemma_proxy.py  json_utils.py  main.py  pokemon_card_analyzer.py  pokemon_card_annotator.py  pokemon_card_extractor.py  pokemon_card_utils.py  pyproject.toml  requirements.txt  test_analyze_pokemon.py  test_annotate_pokemon.py  test_graded_card_extraction.py  test_image_tools.py  test_pokemon_cards.py  test_pokemon_smart_crop.py  tool_executor.py  tool_framework.py  tool_parser.py
benchmarks/: benchmark_runner.py
docs/: Functions Export.json  api.md  development.md  open-webui_all-chats-export-1745913617909.json  open-webui_chat-export-1745910158758.json  open-webui_config-1745913602631.json
examples/: invalid_script.py  sample_script.py  test.sh
logs/conversations/20250428_135831/: prompts.txt  response.json
logs/conversations/20250428_135832/: prompts.txt  response.json
logs/conversations/20250428_135833/: prompts.txt  response.json
logs/conversations/20250428_140208/: prompts.txt  response.json
prompts/: system_prompt.md
scripts/: prd.txt  sample_script.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json
tests/: test_api.py  test_functions.py  test_model.py  test_tool_executor.py  test_tool_framework.py  test_tool_parser.py
utils/: function_handler.py  monitoring.py
(+141 files in other folders)
